# dcmini-fw

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bacon.toml  flake.nix  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
crates/ads1299/: Cargo.toml
crates/ads1299/src/: dd_regs.rs  errors.rs  lib.rs  registers.rs
crates/bus-manager/: Cargo.toml
crates/bus-manager/src/: error.rs  factory.rs  handle.rs  lib.rs  manager.rs
crates/bus-manager/tests/: manager_tests.rs
crates/cvep-decoder/: Cargo.toml
crates/cvep-decoder/scripts/: README.md  analyze_cvep_benchmark_results.py  benchmark_125hz_profile_matrix.py  benchmark_causal_preprocessing_vs_reference.py  benchmark_cca_sliding_windows.py  benchmark_cca_vs_rust.py  benchmark_pyntbci_example3_etrca.py  benchmark_pyntbci_vs_rust.py  benchmark_umm_sliding_windows.py  benchmark_umm_variants.py  benchmark_umm_vs_rust.py  cca_reference_utils.py  compare_reference_vs_causal_preprocessing.py  compare_rust_preprocessing_to_python.py  compare_thielen2021_packaged_vs_raw.py  download_cvep_datasets.py  export_pyntbci_etrca.py  export_pyntbci_rcca.py  export_pyntbci_urcca.py  export_umm_features.py  search_best_125hz_cca_inprocess.py  search_best_125hz_configs.py  test_cca_stimulus_alignment.py  test_loader_window_dispatch.py  test_thielen2021_cca_parity.py  umm_feature_utils.py
crates/cvep-decoder/src/: banks.rs  cca_accumulator.rs  cca_update_policy.rs  cumulative_cca.rs  cumulative_umm.rs  decoder.rs  instantaneous_cca.rs  instantaneous_umm.rs  lib.rs  preprocessing.rs  types.rs  urcca.rs
crates/cvep-decoder/src/internal/: linalg.rs  mod.rs  score.rs  stats.rs
crates/cvep-decoder/tests/: etrca_fixture_accuracy.rs  urcca_fixture_parity.rs
crates/cvep_bench/: README.md  pyproject.toml
crates/cvep_bench/src/cvep_bench/: __init__.py
crates/cvep_bench/src/cvep_bench/algorithms/: __init__.py  pyntbci_models.py  umm_features.py
crates/cvep_bench/src/cvep_bench/benchmarks/: matrix_125hz.py  sliding_umm.py  sliding_windows.py  umm_sweep.py
crates/cvep_bench/src/cvep_bench/cli/: benchmark_125hz_profile_matrix.py  benchmark_causal_preprocessing_vs_reference.py  benchmark_pyntbci_vs_rust.py  benchmark_umm_sliding_windows.py  compare_thielen2021_packaged_vs_raw.py  download_cvep_datasets.py  export_umm_features.py  search_best_125hz_cca_inprocess.py  search_best_125hz_configs.py
crates/cvep_bench/src/cvep_bench/datasets/: loaders.py  preprocessing.py
crates/cvep_bench/src/cvep_bench/export/: __init__.py  pyntbci_rcca.py  pyntbci_urcca.py
crates/cvep_bench/tests/: conftest.py
crates/cvep_bench/tests/integration/: test_cca_stimulus_alignment.py  test_thielen2021_cca_parity.py
crates/cvep_bench/tests/unit/: test_windows.py
crates/dc-mini-app/: Cargo.toml  build.rs  memory-softdevice.x  memory.x  memory_no_ext_flash.x
crates/dc-mini-app/.cargo/: config.toml
crates/dc-mini-app/src/: bus_manager.rs  clock.rs  events.rs  lib.rs  main.rs  status.rs  util.rs
crates/dc-mini-app/src/storage/: data.rs  keys.rs  mod.rs  profile_manager.rs
crates/dc-mini-app/src/tasks/: battery.rs  blinky.rs  demo.rs  mod.rs  neopix.rs
crates/dc-mini-app/src/tasks/ads/: config.rs  events.rs  mod.rs  tasks.rs
crates/dc-mini-app/src/tasks/apds/: config.rs  events.rs  mod.rs  tasks.rs
crates/dc-mini-app/src/tasks/ble/: ads_stream.rs  mic_stream.rs  mod.rs
crates/dc-mini-app/src/tasks/cvep/: events.rs  mod.rs  model.rs  tasks.rs
crates/dc-mini-app/src/tasks/dfu/: shared.rs
crates/dc-mini-app/src/tasks/haptic/: events.rs  mod.rs  tasks.rs
crates/dc-mini-app/src/tasks/imu/: config.rs  events.rs  mod.rs  tasks.rs
crates/dc-mini-app/src/tasks/mic/: adpcm.rs  config.rs  events.rs  mod.rs  tasks.rs
crates/dc-mini-app/src/tasks/power_control/: events.rs
crates/dc-mini-app/src/tasks/session/: events.rs  mod.rs  tasks.rs
crates/dc-mini-app/src/tasks/usb/: ads.rs  battery.rs  cvep.rs  device_info.rs  dfu.rs  mic.rs  mod.rs  profile.rs  session.rs  system.rs
crates/dc-mini-boot/: Cargo.toml  build.rs  memory-softdevice.x  memory.x  memory_no_ext_flash.x
crates/dc-mini-boot/src/: main.rs
crates/dc-mini-bsp/: Cargo.toml  README.md
crates/dc-mini-bsp/.cargo/: config.toml
crates/dc-mini-bsp/src/: ble.rs  lib.rs  resources.rs  usb.rs
crates/dc-mini-bsp/src/board/: mod.rs  r6.rs  sr1.rs  sr2.rs  sr3.rs  sr6.rs  sr7.rs
crates/dc-mini-host/: Cargo.toml
crates/dc-mini-host-py/: Cargo.toml  pyproject.toml
crates/dc-mini-host-py/examples/: basic_usage.py  rerun_streaming.py  streaming_example.py  test_bindings.py
crates/dc-mini-host-py/src/: lib.rs
crates/dc-mini-host-unity/: Cargo.toml  README.md  build.rs
crates/dc-mini-host-unity/Assets/Plugins/Android/: README.md
crates/dc-mini-host-unity/Assets/Scripts/DcMini/: DcMini.Runtime.asmdef  DcMiniAndroidUsb.cs  DcMiniClient.cs  DcMiniQuestSample.cs  DcMiniTypes.cs  README.md
crates/dc-mini-host-unity/src/: lib.rs
crates/dc-mini-host/assets/: dc_mini_host.rbl  dcm - 128x128.xcf
crates/dc-mini-host/scripts/: README.md  edf2nwb.py  plot_edf.py  read_edf.py  requirements.txt
crates/dc-mini-host/src/: lib.rs
crates/dc-mini-host/src/clients/: ble.rs  mod.rs  usb.rs
crates/dc-mini-host/src/fileio/: dat.rs  edf.rs  mod.rs
crates/dc-mini-host/src/ui/: ads_panel.rs  battery_panel.rs  device_info_panel.rs  device_panel.rs  mic_panel.rs  mod.rs  profile_panel.rs  session_panel.rs
crates/dc-mini-host/src/ui/acquisition/: channel.rs  mod.rs  settings.rs
crates/dc-mini-icd/: Cargo.toml  build.rs
crates/dc-mini-icd/protos/: ads.proto  ads_pb2.py  ads_pb2.pyi  mic.proto  mic_pb2.py  mic_pb2.pyi
crates/dc-mini-icd/src/: ads.rs  apds.rs  cvep.rs  imu.rs  lib.rs  mic.rs
crates/icm-45605/: Cargo.toml  device.yaml
crates/icm-45605/src/: lib.rs  ll.rs
crates/ws2812-nrf-pwm/: Cargo.toml
crates/ws2812-nrf-pwm/src/: lib.rs
python/cvep-bench/: pyproject.toml
python/cvep-bench/src/cvep_bench/algorithms/: cca_reference.py  continuous_state_cca.py
python/cvep-bench/tests/unit/: test_continuous_state_cca.py  test_loader_dispatch.py
(+111 files in other folders)
