[workspace]
members = [
  "crates/dc-mini-app",
  "crates/dc-mini-boot",
  "crates/dc-mini-bsp",
  "crates/dc-mini-icd",
  "crates/dc-mini-host",
  "crates/dc-mini-host-py",
  "crates/ws2812-nrf-pwm",
  "crates/xtask",
  "crates/icm-45605",
]
default-members = ["crates/xtask"]
resolver = "2"

[workspace.dependencies]
cfg-if = "1.0"
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7" }

defmt = { version = "1.0" }
defmt-rtt = { version = "1.0" }
derive_more = { version = "2.0", default-features = false, features = ["from"] }

embassy-boot = { version = "0.6" }
embassy-boot-nrf = { version = "0.10" }
embassy-embedded-hal = "0.5"
embassy-executor = { version = "0.9", features = [
  # "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
] }
embassy-futures = { version = "0.1" }
embassy-nrf = { version = "0.9", features = [
  "nrf52840",
  "reset-pin-as-gpio",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-usb = { version = "0.5" }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", default-features = false, features = [
  "tick-hz-32_768",
] }

embedded-alloc = { version = "0.7", features = ["llff"] }
embedded-storage = "0.3"
embedded-storage-async = "0.4"
embedded-hal-bus = { version = "0.3", features = ["async"] }

embedded-sdmmc = { version = "0.9", features = [
  # "defmt-log",
], default-features = false }
# embedded-io = { version = "0.5" }
# embedded-io-async = { version = "0.5" }

futures = { version = "0.3", default-features = false, features = [
  "async-await",
  "alloc",
] }
sequential-storage = { version = "7.1", features = ["heapless"] }

heapless = { version = "0.9", features = ["serde"] }

smart-leds = "0.4"
smart-leds-trait = "0.3"
ws2812-spi = "0.5"
npm1300 = { git = "https://github.com/pperanich/npm1300-rs", branch = "add-ldsw-ibatt", features = [
  "defmt-03",
] }
apds9253 = { git = "https://github.com/pperanich/apds9253-rs", branch = "main", features = [
  "defmt-03",
  "async",
] }


nrf-sdc = { version = "0.4", default-features = false, features = [
  "nrf52840",
  "peripheral",
] }
nrf-mpsl = { version = "0.3", default-features = false, features = [
  "critical-section-impl",
  "nrf52840",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
# BLE dependencies
bt-hci = { version = "0.7", default-features = false }
trouble-host = { version = "0.5", features = ["gatt", "derive", "peripheral"] }
syn = "2.0"
quote = "1.0"

postcard = { version = "1", features = ["alloc"] }
postcard-rpc = { version = "0.12", features = ["embassy-usb-0_5-server"] }
postcard-schema = { version = "0.2", features = [
  "derive",
  "alloc",
  "heapless-v0_9",
] }

panic-probe = { version = "1", features = ["print-defmt"] }
panic-reset = { version = "0.1" }

portable-atomic = { version = "1.6", features = ["critical-section"] }
static_cell = { version = "2", features = ["nightly"] }
paste = "1"

time = { version = "0.3", default-features = false }
trallocator = "0.2"
prost = { version = "0.14", default-features = false, features = ["derive"] }


[patch.crates-io]
# embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
#
# # embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs", branch = "develop" }
# embedded-sdmmc = { git = "https://github.com/Be-ing/embedded-sdmmc-rs", branch = "bisync" }
# postcard-rpc = { git = "https://github.com/jamesmunns/postcard-rpc.git", branch = "main" }
# postcard-schema = { git = "https://github.com/jamesmunns/postcard.git", branch = "main" }
# sequential-storage = { git = "https://github.com/tweedegolf/sequential-storage.git", branch = "master" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", branch = "main" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", branch = "main" }
# bt-hci = { git = "https://github.com/embassy-rs/bt-hci.git", branch = "main" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", branch = "main" }
# micromath = { git = "https://github.com/tarcieri/micromath", branch = "main" }
# bluest = { git = "https://github.com/alexmoon/bluest", branch = "main" }

[profile.dev]
opt-level = 3
codegen-units = 1
lto = "off"

[profile.release]
debug = true
codegen-units = 1
lto = "off"

[profile.lto]
inherits = "release"
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
