[package]
name = "dc-mini-boot"
version = "0.1.0"
edition = "2024"
publish = false

repository = "https://github.com/iscoe/dc-mini-sw"
authors = ["Preston Peranich <pperanich@gmail.com>"]
categories = ["hardware-support", "embedded", "no-std"]
keywords = ["arm", "cortex-m", "nrf", "hal"]
license = "0BSD"

[features]
default = ["defmt"]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "embassy-boot-nrf?/defmt",
  "embassy-nrf/defmt",
  "dc-mini-bsp/defmt",
]
external-flash = ["dep:embassy-boot-nrf"]
trouble = []
usb = []
alloc = []
critical-section = []
demo = []
# Hardware revision of board.
sr6 = ["dc-mini-bsp/sr6"]

[dependencies]
embassy-boot-nrf = { workspace = true, optional = true }
embassy-nrf = { workspace = true }
embassy-sync = { workspace = true }

defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }

cortex-m = { version = "0.7", features = [
  "critical-section-single-core",
  "inline-asm",
] }
cortex-m-rt = { workspace = true }

dc-mini-bsp = { path = "../dc-mini-bsp" }
