[package]
name = "dc-mini-bsp"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/iscoe/dc-minihw"
authors = ["Preston Peranich <pperanich@gmail.com>"]
categories = ["hardware-support", "embedded", "no-std"]
keywords = ["arm", "cortex-m", "nrf", "hal"]
license = "0BSD"

[features]
default = []
defmt = [
  "dep:defmt",
  "embassy-nrf/defmt",
  "heapless/defmt",
  "nrf-sdc/defmt",
  "nrf-mpsl/defmt",
  "ads1299/defmt",
  "icm-45605/defmt",
  "spk0838-pdm/defmt",
]
trouble = ["nrf-sdc", "nrf-mpsl"]
usb = []
sr6 = []

[dependencies]
bus-manager = { workspace = true }
embassy-nrf = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-executor = { workspace = true }
embassy-embedded-hal = { workspace = true }
grounded = "0.2"
heapless = { workspace = true }
defmt = { workspace = true, optional = true }
nrf-sdc = { workspace = true, optional = true }
nrf-mpsl = { workspace = true, optional = true }
static_cell = { workspace = true }
embedded-hal-bus = { workspace = true }
embedded-sdmmc = { workspace = true }

ads1299 = { path = "../ads1299/" }
icm-45605 = { path = "../icm-45605/" }
spk0838-pdm = { path = "../spk0838-pdm/" }
cfg-if.workspace = true
