[package]
name = "dc-mini-host-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dc_mini_host_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
dc-mini-host = { path = "../dc-mini-host/" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
heapless = { workspace = true }
