[package]
name = "dc-mini-host-unity"
version = "0.1.0"
edition = "2021"
description = "Unity/Quest native host bindings for DC Mini"
build = "build.rs"

[lib]
name = "dc_mini_host_unity"
crate-type = ["cdylib", "rlib"]

[dependencies]
dc-mini-icd = { path = "../dc-mini-icd", features = ["use-std"] }
heapless = { workspace = true }
libc = "0.2"
nusb = "0.1.14"
postcard-rpc = { version = "0.12", features = ["use-std", "raw-nusb"] }
thiserror = "2.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time"] }

[build-dependencies]
csbindgen = "1.9.7"
