[package]
name = "dc-mini-host"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/iscoe/dc-mini-sw"
authors = ["Preston Peranich <pperanich@gmail.com>"]
description = "Host utilities for DC-Mini"

[dependencies]
dc-mini-icd = { path = "../../crates/dc-mini-icd/", features = ["use-std"] }
postcard-rpc = { version = "0.11", features = ["use-std", "raw-nusb"] }
postcard-schema = { version = "0.2", features = ["derive", "use-std"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
rerun = "0.22"
re_viewer = "0.22"
re_crash_handler = "0.22"
re_sdk_comms = { version = "0.22", features = ["server"] }
bluest = "0.6"
postcard = "1"
futures-lite = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["datepicker"] }
heapless = "0.8"
futures = "0.3"
once_cell = "1.20"

# mimalloc is a much faster allocator:
mimalloc = "0.1.43"

# Dependencies for dat2edf binary
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rfd = "0.15"                                       # Native file dialogs
walkdir = "2.5"                                    # Directory traversal

derive_more = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "gui"

[[bin]]
name = "gui-rr"

[[bin]]
name = "dat2edf"

[[bin]]
name = "dc-convert-gui"
