[package]
name = "icm-45605"
authors = ["Preston Peranich"]
version = "0.1.0"
edition = "2021"
description = "Embedded driver for the TDK ICM-45605 IMU."
documentation = "https://docs.rs/icm-45605"
repository = "https://github.com/iscoe/dc-mini-sw"
license = "Apache-2.0"
keywords = ["embedded-hal-driver"]
categories = ["no-std", "embedded", "asynchronous", "hardware-support"]

[features]
"default" = []
"defmt" = [
  "embedded-hal/defmt-03",
  "embedded-hal-async/defmt-03",
  "dep:defmt",
  "device-driver/defmt-03",
]

[dependencies]
bitflags = "2"
micromath = { version = "2.1", features = [
  "quaternion",
  "vector",
  "statistics",
] }
cfg-if = "1.0"
defmt = { version = "1.0", optional = true }
device-driver = { version = "1.0", default-features = false, features = ["dsl", "yaml"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
heapless = "0.9"
num_enum = { version = "0.7", default-features = false }
derive_more = { version = "2.0", default-features = false, features = ["from"] }
