[project]
name = "cvep-bench"
version = "0.1.0"
description = "Reusable c-VEP benchmarking and analysis tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.16.0",
  "mne>=1.11.0",
  "numpy>=2.2.6",
  "pyntbci>=1.8.3",
  "rich>=14.3.3",
  "scipy>=1.15.3",
]

[project.optional-dependencies]
analysis = ["matplotlib>=3.9.0", "pandas>=2.3.0"]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]

[project.scripts]
benchmark_pyntbci_vs_rust = "cvep_bench.cli.benchmark_pyntbci_vs_rust:main"
benchmark_cca_vs_rust = "cvep_bench.cli.benchmark_cca_vs_rust:main"
benchmark_umm_vs_rust = "cvep_bench.cli.benchmark_umm_vs_rust:main"
benchmark_125hz_profile_matrix = "cvep_bench.cli.benchmark_125hz_profile_matrix:main"
search_best_125hz_configs = "cvep_bench.cli.search_best_125hz_configs:main"
search_best_125hz_cca_inprocess = "cvep_bench.cli.search_best_125hz_cca_inprocess:main"
compare_thielen2021_packaged_vs_raw = "cvep_bench.cli.compare_thielen2021_packaged_vs_raw:main"
compare_rust_preprocessing_to_python = "cvep_bench.cli.compare_rust_preprocessing_to_python:main"
export_pyntbci_etrca = "cvep_bench.cli.export_pyntbci_etrca:main"
export_pyntbci_rcca = "cvep_bench.cli.export_pyntbci_rcca:main"
export_pyntbci_urcca = "cvep_bench.cli.export_pyntbci_urcca:main"
analyze_cvep_benchmark_results = "cvep_bench.cli.analyze_cvep_benchmark_results:main"
benchmark_causal_preprocessing_vs_reference = "cvep_bench.cli.benchmark_causal_preprocessing_vs_reference:main"
compare_reference_vs_causal_preprocessing = "cvep_bench.cli.compare_reference_vs_causal_preprocessing:main"
download_cvep_datasets = "cvep_bench.cli.download_cvep_datasets:main"
benchmark_pyntbci_example3_etrca = "cvep_bench.cli.benchmark_pyntbci_example3_etrca:main"
benchmark_cca_sliding_windows = "cvep_bench.cli.benchmark_cca_sliding_windows:main"
benchmark_umm_sliding_windows = "cvep_bench.cli.benchmark_umm_sliding_windows:main"
benchmark_umm_variants = "cvep_bench.cli.benchmark_umm_variants:main"
export_umm_features = "cvep_bench.cli.export_umm_features:main"
benchmark_continuous_state_cca = "cvep_bench.cli.benchmark_continuous_state_cca:main"
benchmark_etrca_training_curve = "cvep_bench.cli.benchmark_etrca_training_curve:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvep_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
